# network-operator

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md
deploy/: operator.yaml
deploy/crds/: network.storm.io_networks.yaml
examples/: network-bgp.yaml  network-envoy.yaml  network-overlay.yaml
packaging/: build-packages.sh  network-operator.spec
src/: apply.rs  controller.rs  crd.rs  health.rs  immutable.rs  lib.rs  main.rs  modes.rs  status.rs  testutil.rs
src/render/: agent.rs  config.rs  envoy.rs  lb.rs  mod.rs  operator.rs  rbac.rs  util.rs
src/render/assets/: envoy-bootstrap.json
tests/: golden.rs
tests/golden/: bare-metal.yaml  bgp.yaml  encrypted.yaml  native.yaml  overlay-envoy.yaml  overlay.yaml
