[package]
name = "network-operator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Cluster Network Operator for the rustkube/stormcos stack — manages the Cilium CNI lifecycle from a Network CR (install, upgrade, reconcile, status). CNO-equivalent, in Rust."
repository = "https://github.com/glennswest/network-operator"

[dependencies]
