[package]
name = "network-operator"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Cluster Network Operator for the rustkube/stormcos stack — manages the Cilium CNI lifecycle from a Network CR (install, upgrade, reconcile, status). CNO-equivalent, in Rust."
repository = "https://github.com/glennswest/network-operator"

[[bin]]
name = "network-operator"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[lib]
name = "network_operator"
path = "src/lib.rs"

[dependencies]
kube = { version = "0.98", features = ["runtime", "derive", "client"] }
# "schemars" so metav1.Condition can appear in the generated CRD schema.
k8s-openapi = { version = "0.24", features = ["v1_32", "schemars"] }
schemars = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
ipnet = "2"

[profile.release]
lto = "thin"
